# playwright-cookbook

./: .pre-commit-config.yaml  LICENSE  README.md  load_chapters.py  load_contents.py  load_history_weather.py  pyproject.toml
tests/: test_load_chapters.py  test_read_history_weather.py
utils/: __init__.py  _logging.py
